--- a/Skeleton-2.0.4/css/skeleton.css
+++ b/Skeleton-2.0.4/css/skeleton.css
@@ -206,7 +206,7 @@ input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
-  background-color: #33C3F0;
+  background-color: rgba(0, 0, 0, 0.75);
   border-color: #33C3F0; }
 .button.button-primary:hover,
 button.button-primary:hover,
@@ -219,7 +219,7 @@ input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
   color: #FFF;
-  background-color: #1EAEDB;
+  background-color: rgba(194, 133, 0, 0.75);
   border-color: #1EAEDB; }
 
 
