--- a/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
@@ -1534,7 +1534,7 @@ canvas{
   position: fixed;
   display: inline-block;
   vertical-align:middle;
-  z-index: 0;
+  z-index:0;
   overflow: auto;
     left: 0;
     bottom: 0;
@@ -1545,7 +1545,7 @@ canvas{
 
 #particles-js{
   width: 100%;
-  height: 400%;   
+  height: 100%;   
 }
 
 .header-section .container {
@@ -1554,4 +1554,19 @@ canvas{
 	}
 .container .row{
    z-index: 1; 
+}
+
+#test{
+    z-index: 7;
+}
+.text-center.pt-4{
+    position: relative;
+    z-index: 7;
+}
+.community-warp.spad{
+    position: relative;
+    z-index: 1;
+}
+.map{
+    z-index: 1;
 }
