New dialog+localStorageChecker+GotoPage

--- a/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
@@ -1678,3 +1678,11 @@ button:hover {
   color: red;
   cursor: pointer;
 }
+
+#testcolor{
+    color: white;
+}
+
+#no {
+    background-color: red;
+}
