--- a/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
@@ -1685,3 +1685,23 @@ button:hover {
 #no {
     background-color: red;
 }
+
+.review-text:first-child{
+    
+}
+#FL::first-letter {
+    text-transform: uppercase;
+  font-size: 600%;
+  color: black;
+}
+#review-pictures{
+    padding-top: 1%;
+    
+}
+#review-pics{
+    width: 20%;
+}
+#gameplay{
+    width: 100%;
+    
+}
