--- a/game-warrior-gh-pages/game-warrior-gh-pages/css/HappyNewYear.css
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/css/HappyNewYear.css
@@ -4,22 +4,29 @@
     box-sizing: border-box;
 }
 
-
+html
 
 body {
     width: 100%;
     height: 80%;
-    background-color: floralwhite;
+    background-color: black;
+    
 }
 
 #new-year-svg {
     height: 10%;
+    background-color: transparent;
+    position: absolute;
+        
+}
+#new-year path{
+        stroke :#ffb320;
 }
 #happy-stroke{
    stroke-dasharray:600px;
    stroke-dashoffset: 600px;
    animation: happy-dash 2s ease forwards 0.5;
-    
+        stroke :#ffb320;
 }
 
 
@@ -73,6 +80,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+    background-color: black;
+    position: fixed;
+    right: 50%;
+    bottom: 15%;
+    left: 50%;
+    z-index: 7;
 }
 
 .button {
@@ -86,7 +99,7 @@ body {
   font-weight: 700;
   color: #313133;
   background: rgba(248, 233, 205, 0.83);
-background: linear-gradient(90deg, rgba(248, 233, 205, 0.83) 2%, rgba(79,209,197,1) 100%);
+background: linear-gradient(90deg, rgba(248, 233, 205, 0.83) 2%, rgb(255, 179, 32) 100%);
   border: none;
   border-radius: 1000px;
   box-shadow: 12px 12px 24px rgba(79,209,197,.64);
@@ -181,4 +194,16 @@ button:hover::after, button:focus::after {
     100% {
         opacity: 1;
     }
+}
+#canvas{
+    z-index: 1;
+    position: fixed;
+    overflow: hidden;
+}
+#new-year{
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+    top: 0;
+    background-color: transparent;
 }
