--- a/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
@@ -1707,3 +1707,19 @@ button:hover {
     width: 100%;
     
 }
+.blog-content li{
+    font-size: 14px;
+    color: #878787;
+    line-height: 2;
+    margin-bottom: 25px;
+}
+.row #pichyperlink{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        text-decoration: none; /* No underlines on the link */
+        z-index: 10; /* Places the link above everything else in the div */
+        filter: alpha(opacity=1); /* Fix to make div clickable in IE */
+}
