--- a/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
@@ -1157,7 +1157,7 @@ ol {
 }
 
 .community-post-list li {
-	padding: 33px 55px 65px;
+	padding: 33px 55px;
 	margin-bottom: 21px;
 	overflow: hidden;
 	border: 1px solid #878787;
