--- a/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/css/style.css
@@ -1723,3 +1723,16 @@ button:hover {
         z-index: 10; /* Places the link above everything else in the div */
         filter: alpha(opacity=1); /* Fix to make div clickable in IE */
 }
+.col-md-6 #pichyperlink{
+    position: relative;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        text-decoration: none; /* No underlines on the link */
+        z-index: 10; /* Places the link above everything else in the div */
+        filter: alpha(opacity=1); /* Fix to make div clickable in IE */
+}
+.more{
+    display: none;
+}
