Add modals and alerts

--- a/game-warrior-gh-pages/game-warrior-gh-pages/css/HappyNewYear.css
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/css/HappyNewYear.css
@@ -207,3 +207,9 @@ button:hover::after, button:focus::after {
     top: 0;
     background-color: transparent;
 }
+.alert{
+    width: 30%;
+    float: right;
+    background-color: transparent;
+    z-index: 15;
+}
